--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,9 +14,9 @@
 <body>
     <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
-            <a class="navbar-brand" style= "color: white;" href="#">Logo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav" style="color: white;">
-                <span class="navbar-toggler-icon"></span>
+            <a class="navbar-brand" style= "color: white;" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav" style="border-color: white;">
+                <span class="navbar-toggler-icon" style="color: white;"></span>
             </button>
             <div class="collapse navbar-collapse" id="myNav">
                 <ul class="navbar-nav ml-auto">
