--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" style= "color: white;" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav" style="border-color: white;">
-                <span class="navbar-toggler-icon" style="color: white;"></span>
+            <a class="navbar-brand" href="#"><img class = "" src="logo-via-logohub.png" width="50" height="30" alt=""></i></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="myNav">
                 <ul class="navbar-nav ml-auto">
