--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -1,70 +1,76 @@
-
-.speech{
-    height: 180px;
-}
-
-.speech input {
-    border: 0; 
-    width: 700px; 
-    display: inline-block; 
-    margin-top: 100px;
-}
-
-
-.microphone-body{
-    display: flex;
-    height: 31vh;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-}
-.microphone{
-    background: #5fb5fe;
-    width: 140px;
-    height: 140px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-.microphone:hover{
-    width:160px;
-    height:160px;
-}
-.circle{
-    width: 23px;
-    height: 45px;
-    background: #fff;
-    position: absolute;
-    border-radius: 20px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.circle::before {
-    content: ')';
-    position: absolute;
-    bottom: -43px;
-    left: 8px;
-    transform: rotate(90deg);
-    font: 50px cursive;
-}
-.circle::after {
-    content: '|';
-    position: absolute;
-    bottom: -35px;
-    left: 8px;
-    font-weight: 1000;
-    font: 20px cursive;
-}
-
-.microphone:hover > .circle {
-    background:rgba(126, 0, 252, 0.959);
-    color: rgba(126, 0, 252, 0.959)  ;
-}
-
-@media only screen and (max-width: 730px) {
-    .speech input {
-        width: 95%;
+  
+    .speech{
+        height: 180px;
     }
+
+    .speech input {
+        border: 0; 
+        width: 700px; 
+        display: inline-block; 
+        margin-top: 100px;
+    }
+
+
+    .microphone-body{
+        display: flex;
+        height: 31vh;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+    }
+
+    @media only screen and (max-width: 730px) {
+        .speech input {
+            width: 95%;
+        }
+    }
+    .mic-hover:hover div{
+        background-color: #343a40;
+
+    }
+    .mic-hover:hover{
+        border: 2px solid #01092428;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        border-radius: 3px;
+        /* box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2); */
+        transition: all 200ms ease-out;
+    }
+
+
+.transaction-body:hover{
+
+    border: 2px solid #01092428;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 3px;
+    /* box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2); */
+    transition: all 200ms ease-out;
 }
 
+  
+  .trans-price{
+      padding-top: 70px;
+      padding-bottom: 70px;
+  }
+
+  .transaction-body:hover .trans-price{
+    background-color: #6c757d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: white;
+    transition: all 200ms ease-out;
+}
+
+body{
+    background-image: url("https://images.unsplash.com/photo-1528731708534-816fe59f90cb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed; 
+}
+
+.border-3 {
+    border-width:3px !important;
+}
+
+.border-4 {
+    border-width:4px !important;
+}
