--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,6 +3,12 @@
 <script src="/BOOTSTRAP_4.js"></script>
 <script src="/script/script.js"></script>
 <script>
+    if("<%=error%>"){
+        speak("<%=error%>");
+    }
+    else if("<%=success%>"){
+        speak("<%=success%>");
+    }
 </script>
 </body>
 
