--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,22 +13,46 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img class = "" src="logo-via-logohub.png" width="50" height="30" alt=""></i></a>
+        <div class="container-fluid h5">
+            <a class="navbar-brand" href="/"><img class="" src="logo-via-logohub.png" width="50" height="30"
+                    alt=""></i></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="myNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="">Sign Up <i class="fas fa-user-plus"></i></a> 
+                        <a class="nav-link text-light" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="">Login <i class="fas fa-user-plus"></i></a> 
+                        <a class="nav-link text-light" href="/transaction">Transactions</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="/logout">Logout <i class="fas fa-user fa-fw"></i></a>
                     </li>
                 </ul>
             </div>
 
         </div>
-         
+
     </nav>
+
+    <% if(error && error.length > 0){ 
+        %>
+    <div class="container-fluid w-100 p-0">
+        <div class="alert alert-danger" role="alert">
+            <%= error %>
+        </div>
+    </div>
+
+    <% } else if(success && success.length > 0) { 
+        %>
+
+    <div class="container-fluid w-100 p-0">
+        <div class="alert alert-success" role="alert">
+            <%= success %>
+        </div>
+    </div>
+    <% } %>
