--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/BOOTSTRAP_4.css" type="text/css">
     <link rel="stylesheet" href="/Fontawesome/css/all.css" type="text/css">
     <link rel="stylesheet" href="/stylesheet/login.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Chakra+Petch:400,700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -70,13 +72,6 @@
     <script src="/BOOTSTRAP_4.js"></script>
     <script src="/script/script.js"></script>
     <script>
-
-    if("<%=success%>"){
-        speak("<%=success%>");
-    }
-    else if("<%=error%>"){
-        speak("<%=error%>");
-    }
     </script>
 </body>
 
