--- a/public/stylesheet/register.css
+++ b/public/stylesheet/register.css
@@ -3,7 +3,8 @@ body{
 
     background-position: center; 
     background-repeat: no-repeat; 
-    background-size: cover; 
+    background-size: cover;
+    font-family: 'Chakra Petch', sans-serif; 
 }
 
 
