--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -1,4 +1,7 @@
-  
+    body{
+        font-family: 'Chakra Petch', sans-serif;
+
+    }
     .speech{
         height: 180px;
     }
@@ -73,4 +76,7 @@ body{
 
 .border-4 {
     border-width:4px !important;
+}
+.active{
+    font-weight: 900;
 }
