--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/BOOTSTRAP_4.css" type="text/css">
     <link rel="stylesheet" href="/Fontawesome/css/all.css" type="text/css">
     <link rel="stylesheet" href="/stylesheet/register.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Chakra+Petch:400,700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
